# graphs

./: .gitignore  123123.cpp  CMakeLists.txt  README.md
include/: app.h  board.h  node.h  sidebar.h
res/: application.qrc
src/: app.cpp  board.cpp  main.cpp  node.cpp  sidebar.cpp
